# attract_attention

./: README.md
c-cpp/: CMakeLists.txt
c-cpp/src/: attention2msg.cpp
python/: attention2msg.py
